Fixing logos to look better on mobile

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -383,6 +383,33 @@ body, html {
     text-decoration: none !important;
 }
 
+
+.no-padding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
+.logo-container-mobile {
+    margin: 5;    
+    display: block;
+    text-align: center;
+    /*width: 25%;*/
+    color: #fff;
+    border: none;
+    overflow: hidden;
+    text-decoration: none !important;
+}
+.logo-container-mobile h4 {
+    color: inherit;
+    font-size: 20px;
+    margin-top: 2px;
+}
+
+.logo-container-mobile:hover {
+    color: #282828;
+}
+
+
 .patreon {
   display: block;
   margin-left: auto;
@@ -986,6 +1013,7 @@ header.is-sticky.is-dark .header__toggle.is-visible span svg {
 .footer-bg {
   width: 100%;
   height: 200px;
+  margin: 0 !important;
   position: relative;
   overflow: hidden;
   display: -webkit-box;
@@ -1006,6 +1034,7 @@ header.is-sticky.is-dark .header__toggle.is-visible span svg {
     bottom: 10;
     content: '';
     opacity: 1;
+    margin: !important;
     /*background: #ee76ad;*/
     background: -moz-linear-gradient(135deg, #11ded9 30%, #11ded9 100%);
     background: -webkit-gradient(left bottom, right top, color-stop(0%, #11ded9), color-stop(100%, #05e646));
@@ -1019,7 +1048,7 @@ header.is-sticky.is-dark .header__toggle.is-visible span svg {
   /*background-color: #282828;*/
 /*  grid-row-start: 2;
   grid-row-end: 4;*/
-  width: 75%;
+  width: 100%;
   height: 100%;
   color: #282828;
   display: -webkit-box;
@@ -1047,15 +1076,31 @@ header.is-sticky.is-dark .header__toggle.is-visible span svg {
 .visible-device {
   display: none;
 }
+.visible-device-flex {
+  display: none;
+}
 .visible-desktop {
   display: display;
+}
+.visible-desktop-flex {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
 }
 
 @media (max-width : 450px) {
     .visible-device {
       display: block;
     }
+    .visible-device-flex {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
     .visible-desktop {
+      display: none;
+    }
+    .visible-desktop-flex {
       display: none;
     }
 }
